--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
   }
   body {
+    background-color: #ABD2FF;
     font-family:Verdana;
     color:gray; 
-    background-color:#f9f6f6;
   }
   
   .responsive { /* makes elements, resize responsively,*/
@@ -26,6 +26,23 @@
     padding: 10px;
     margin: auto;
     text-align: center;
+  }
+
+  .logo-center {
+    position: relative;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, 50%);
+  }
+
+  .logo-text {
+    position: relative;
+    top: 50%;
+    left: 50%; 
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+    transform: translate(-50%, 350%);
   }
   
   
