Added lexend font

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,10 @@
 * {
     box-sizing: border-box;
   }
+
   body {
     background-color: #ABD2FF;
-    font-family:Verdana;
+    font-family: 'Lexend', sans-serif;
     color:gray; 
   }
   
@@ -43,6 +44,14 @@
     font-size: 30px;
     font-weight: bold;
     transform: translate(-50%, 350%);
+  }
+
+  .title {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
   }
   
   
