--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,13 @@
   }
 
   body {
-    background-color: #ABD2FF;
+    background-color: white;
     font-family: 'Lexend', sans-serif;
     color:gray; 
+  }
+
+  .title-background {
+    background-color: #ABD2FF;
   }
   
   .responsive { /* makes elements, resize responsively,*/
@@ -41,6 +45,7 @@
     top: 50%;
     left: 50%; 
     color: black;
+    font-family: 'Lexend';
     font-size: 30px;
     font-weight: bold;
     transform: translate(-50%, 350%);
@@ -51,7 +56,21 @@
     text-align: left;
     color: black;
     font-size: 24px;
+    line-height: 30px;
     font-weight: bold;
+  }
+
+  .food-item {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .food-text {
+    font-family: 'Lexend';
+    text-align: left;
+    color: #535353;
+    font-size: 16px;
   }
   
   
