--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,17 @@
   .title-background {
     background-color: #ABD2FF;
   }
+
+  .section-background {
+    background-color: #ABD2FF;
+    border-width: 2px;
+    border-color: #D9D9D9;
+  }
+
+  .section-line {
+    border-width: 2px;
+    border-color: #D9D9D9;
+  }
   
   .responsive { /* makes elements, resize responsively,*/
     max-width:100%;
@@ -57,6 +68,15 @@
     color: black;
     font-size: 24px;
     line-height: 30px;
+    font-weight: bold;
+  }
+
+  .subtitle {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 20px;
+    line-height: 25px;
     font-weight: bold;
   }
 
