--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,6 +125,13 @@
     max-width: 100%;
     max-height: 100%;
   }
+
+  .loading {
+    width: 3rem;
+    height: 3rem;
+    top: 50%;
+    left: 50%; 
+  }
   
   @media only screen and (max-width: 620px) {
     /* For mobile phones: */
