--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,8 @@
     background-color: white;
     font-family: 'Lexend', sans-serif;
     color:gray; 
+    margin-left: 16px;
+    margin-right: 16px;
   }
 
   .title-background {
@@ -139,3 +141,94 @@
       width: 100%;
     }
   }
+
+h1 {
+  color: #252525;
+  font-size: 24pt;
+  font-weight: bold;
+}
+
+h2 {
+  color: #535353;
+  font-size: 20pt;
+  font-weight: medium;
+}
+
+.meds-container {
+  padding-left: 20px;
+}
+
+.meds {
+  display: block;
+  position: relative;
+  padding-left: 36px;
+  margin-bottom: 12px;
+  font-size: 20pxx;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.meds input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.meds {
+  font-size: 20px;
+  color: #252525;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* When the checkbox is checked, add a blue background */
+.meds input:checked ~ .checkmark {
+  background-color: #0A8B36;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.meds input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.meds .checkmark:after {
+  left: 9px;
+  top: 4px;
+  width: 8px;
+  height: 16px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#notes-box {
+  width: 100%;
+  height: 125px;
+  border-style: solid;
+  border-radius: 10px;
+  border-color: #252525;
+  padding: 8px 12px;
+  font-size: 12pt;
+}
