scrollable food item list

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,6 +80,10 @@
     color: white;
   }
 
+  .scrolling-wrapper{
+    overflow-x: auto;
+  }
+
   .title {
     font-family: 'Lexend';
     text-align: left;
