--- a/public/css/food.css
+++ b/public/css/food.css
@@ -8,10 +8,27 @@
     color:gray; 
     margin-left: 16px;
     margin-right: 16px;
+    overflow-x: hidden !important;
   }
+
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
 
   .title-background {
     background-color: #ABD2FF;
+  }
+
+  .section-background {
+    background-color: #ABD2FF;
+    border-width: 2px;
+    border-color: #D9D9D9;
+  }
+
+  .section-line {
+    border-width: 2px;
+    border-color: #D9D9D9;
   }
   
   .responsive { /* makes elements, resize responsively,*/
@@ -51,6 +68,118 @@
     font-size: 30px;
     font-weight: bold;
     transform: translate(-50%, 350%);
+  }
+
+  .amount-change {
+    background-color: #D9D9D9;
+    border-width: 2px;
+    border-color: #D9D9D9;
+  }
+
+  .are-you-sure {
+    background-color: #F34B50;
+    border-width: 2px;
+    border-color: #D9D9D9;
+  }
+
+  .are-you-sure-text {
+    color: white;
+  }
+
+  .scrolling-wrapper{
+    overflow-x: auto;
+  }
+
+  .title {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+  }
+
+  .subtitle {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: bold;
+  }
+
+  .food-item {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .food-name {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 16px;
+  }
+
+  .food-amount {
+    font-family: 'Lexend';
+    text-align: left;
+    color: gray;
+    font-size: 16px;
+  }
+
+  .nutrition-name {
+    font-family: 'Lexend';
+    text-align: left;
+    color: black;
+    font-size: 16px;
+  }
+
+  .nutrition-amount {
+    font-family: 'Lexend';
+    text-align: left;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .axis-value {
+    font-family: 'Lexend';
+    color: gray;
+    font-size: 10px;
+  }
+
+  .axis {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .axis-pointer {
+    max-width: 1.5em;
+    height: auto;
+    width: auto\9;
+  }
+
+  .value-highlight-right {
+    background-color: #0A8B36;
+    border-radius: 25px;
+    transform: translate(-165%);
+    z-index:-1;
+  }
+
+  .value-highlight-wrong {
+    background-color: #F34B50;
+    border-radius: 25px;
+    transform: translate(-165%);
+    z-index:-1;
+  }
+
+  .loading {
+    width: 3rem;
+    height: 3rem;
+    top: 50%;
+    left: 50%; 
   }
   
   @media only screen and (max-width: 620px) {
