--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,7 @@
     color:gray; 
     margin-left: 16px;
     margin-right: 16px;
+    margin-bottom: 16px;
   }
 
   .title-background {
@@ -144,14 +145,21 @@
 
 h1 {
   color: #252525;
-  font-size: 24pt;
+  font-size: 20pt;
   font-weight: bold;
+  margin: 12px 0px;
+
 }
 
 h2 {
   color: #535353;
-  font-size: 20pt;
+  font-size: 16pt;
   font-weight: medium;
+}
+
+h3 {
+  color: black;
+  font-size: 16pt;
 }
 
 .meds-container {
@@ -163,7 +171,7 @@ h2 {
   position: relative;
   padding-left: 36px;
   margin-bottom: 12px;
-  font-size: 20pxx;
+  font-size: 20pt;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -179,7 +187,7 @@ h2 {
 }
 
 .meds {
-  font-size: 20px;
+  font-size: 16pt;
   color: #252525;
 }
 
@@ -231,4 +239,8 @@ h2 {
   border-color: #252525;
   padding: 8px 12px;
   font-size: 12pt;
+}
+
+.logs {
+  margin: 8px 0px;
 }
