--- a/public/css/health.css
+++ b/public/css/health.css
@@ -11,6 +11,29 @@
   margin: 4px 0px;
 }
 
+.navbar-title {
+  color: white;
+}
+
+.navbar-custom {
+  background-color: #3492ff;
+}
+
+.navbar-item {
+  position: relative;
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.selected-navbar-item {
+  background-color: white;
+  color: #3492ff;
+}
+
+.img-responsive {
+  margin:0 auto;
+}
+
 .treatment:after {
   content: '\02795';
   float: right;
