finished implementing general info interaction

--- a/public/css/food.css
+++ b/public/css/food.css
@@ -140,6 +140,11 @@
     font-size: 16px;
   }
 
+  .edit-button {
+    color: white;
+    background-color: #3492ff;
+  }
+
   .food-item {
     position: relative;
     max-width: 100%;
