--- a/public/css/food.css
+++ b/public/css/food.css
@@ -156,6 +156,7 @@
     text-align: left;
     color: black;
     font-size: 16px;
+    font-weight: bold;
   }
 
   .food-amount {
@@ -170,6 +171,7 @@
     text-align: left;
     color: black;
     font-size: 16px;
+    font-weight: bold;
   }
 
   .nutrition-amount {
