health css adjusted

--- a/public/css/health.css
+++ b/public/css/health.css
@@ -19,6 +19,42 @@
   font-size: 16pt;
 }
 
+.title {
+  font-family: 'Lexend';
+  text-align: left;
+  color: black;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.subtitle {
+  font-family: 'Lexend';
+  text-align: left;
+  color: black;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: bold;
+}
+
+.title-gray {
+  font-family: 'Lexend';
+  text-align: left;
+  color: gray;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.subtitle-gray {
+  font-family: 'Lexend';
+  text-align: left;
+  color: gray;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: bold;
+}
+
 .active {
   border-radius: 8px 8px 0px 0px;
   margin-bottom: 0px;
@@ -56,6 +92,9 @@
   border-radius: 20px;
   padding: 4px 16px;
   width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  }
 
  .calendar {
@@ -92,14 +131,14 @@
 }
 
 .appt-name {
-  font-size: 16pt;
+  font-size: 12pt;
   margin-left: 8px;
   color: black;
 }
 
 .appt-details {
-  color: #494949;
-  font-size: 16pt;
+  color: gray;
+  font-size: 12pt;
   margin-left: 8px;
   margin-bottom: 0px;
 }
@@ -107,6 +146,7 @@
 .outline {
   border-style: solid;
   border-radius: 10px;
+  border-width: 2px;
   border-color: #252525;
   padding: 8px 16px;
   margin-top: 4px;
@@ -155,16 +195,18 @@
     padding: 28px 60px;
   }
   h1 {
-    font-size: 36pt;
-    margin: 32px 0px 12px 0px;
+    font-size: 24px;
+    line-height: 30px;
   }
 
   h2 {
-    font-size: 32pt;
+    font-size: 24px;
+    line-height: 30px;
   }
 
   h3 {
-    font-size: 32pt;
+    font-size: 24px;
+    line-height: 30px;
   }
 
   .meds {
@@ -229,7 +271,7 @@
   }
   
   .schedule-button {
-    font-size: 24pt;
+    font-size: 12pt;
     border-radius: 32px;
     padding: 8px 20px;
   }
