--- a/public/css/food.css
+++ b/public/css/food.css
@@ -14,6 +14,13 @@
     overflow-x: hidden !important;
 }
 
+.horizontal-space {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: fit-content;
+ }
+
   .title-background {
     background-color: #ABD2FF;
   }
@@ -145,6 +152,7 @@
     font-size: 16px;
     font-weight: normal;
     background-color: #3492ff;
+    padding: 4px 16px;
   }
 
   .food-item {
